<resources>
    <string name="app_name">Docs by Kartik</string>
    <string name="title_home">Home</string>
    <string name="title_AddDocument">Add Document</string>
    <string name="title_Setting">Setting</string>
    <string name="document_name">Document name</string>
    <string name="more_info">More info</string>
    <string name="upload_file">Upload Document</string>
    <string name="button_add_document">Add Document</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="priority_text">Priority</string>
    <string name="doc_number">Doc Number</string>
    <string name="add_Doc_form">Add Document</string>
</resources>