<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.docsbykartik.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_AddDocument"
        android:name="com.example.docsbykartik.ui.AddDocument.AddDocumentFragment"
        android:label="@string/title_AddDocument"
        tools:layout="@layout/fragment_adddocument" />

    <fragment
        android:id="@+id/navigation_Setting"
        android:name="com.example.docsbykartik.ui.Setting.SettingFragment"
        android:label="@string/title_Setting"
        tools:layout="@layout/fragment_setting" />
</navigation>