<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDocument.AddDocumentFragment">


    <TextView
        android:id="@+id/textAddDocument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_AddDocument"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="86dp">

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/priority_low"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox13"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toEndOf="@+id/checkBox11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/priority_high"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/document_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Doc_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/doc_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Doc_number"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        tools:ignore="LabelFor,TextSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-41dp"
        tools:layout_editor_absoluteY="606dp"
        tools:ignore="MissingConstraints,VisualLintBounds">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/more_info"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_document"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

</androidx.constraintlayout.widget.ConstraintLayout>